style: Address weird layout bug on dashboard

--- a/ui/src/components/_page_header.scss
+++ b/ui/src/components/_page_header.scss
@@ -6,11 +6,6 @@
   display: block;
 }
 
-section + section,
-.section {
-  margin-top: 2.25rem;
-}
-
 .section__title {
   font-size: 1.02rem;
   font-weight: 600;
